--- a/sensor.yaml
+++ b/sensor.yaml
@@ -38,7 +38,7 @@
   state_topic: "bruh/sensornode1"
   name: "SN1 Temperature"
   unit_of_measurement: '°C'
-  value_template: '{{ value_json.temperature | int - 32) * 5 / 9) | round(1) }}'
+  value_template: '{{ ((value_json.temperature | int - 32) * 5 / 9) | round(1) }}'
 
 - platform: mqtt
   state_topic: "bruh/sensornode12"
