add network status scan for devices connected

--- a/sensor.yaml
+++ b/sensor.yaml
@@ -79,3 +79,7 @@
   name: uptime
   unit_of_measurement: hours
 
+- platform: command_line
+  name: Network devices
+  command: "nmap -sP 192.168.1.* |grep 'Nmap scan' |awk '{ print substr($0, index($0,$5)) }'"
+
