--- a/sensor.yaml
+++ b/sensor.yaml
@@ -85,5 +85,5 @@
 
 - platform: command_line
   name: Logs
-  command: "grep ERROR /home/hass/.homeassistant/home-assistant.log"
+  command: "grep ERROR /home/homeassistant/.homeassistant/home-assistant.log"
 
