--- a/sensor.yaml
+++ b/sensor.yaml
@@ -16,18 +16,12 @@
   name: "SN1 Humidity"
   unit_of_measurement: "%"
   value_template: '{{ value_json.humidity | round(1) }}'
-#  value_template: >-
-#      {%- if value_json.humidity|float >= 5 and value_json.humidity|float <= 100 -%}
-#      {{ value_json.temperature | round(1) }}
-#      {%- else -%}
-#      nan
-#      {%- endif -%}
-  qos: 1
+
 
 - platform: mqtt
   state_topic: "bruh/sensornode1"
   name: "SN1 LDR"
-  ##Thiss sensor is not calibrated to actual LUX. Rather, this a map of the input voltage ranging from 0 - 1023 .
+  ##This sensor is not calibrated to actual LUX. Rather, this a map of the input voltage ranging from 0 - 1023 .
   unit_of_measurement: "LUX"
   value_template: '{{ value_json.ldr }}'
   qos: 1
@@ -85,21 +79,6 @@
   name: uptime
   unit_of_measurement: hours
 
-- platform: command_line
-  name: Network devices
-  command: "nmap -sP 192.168.1.* |grep 'Nmap scan' |awk '{ print substr($0, index($0,$5)) }'"
-
-- platform: statistics
-  name: Temp_statistics
-  entity_id: sensor.sn1_temperature
-
-- platform: statistics
-  name: Humidity_statistics
-  entity_id: sensor.sn1_humidity
-  
-- platform: statistics
-  name: AirQ_statistics
-  entity_id: sensor.sn1_ldr
   
   
   
