--- a/groups.yaml
+++ b/groups.yaml
@@ -18,12 +18,12 @@ sensor_node_1_card:
     - switch.bec
     - sensor.thermalsensor
 
-#statistics_view:
-#  name: Statistics
-#  view: yes
-#  entities:
-#    - sensor.temp_statistics_mean
-#    - sensor.humidity_statistics_mean
+statistics_view:
+  name: Statistics
+  view: no
+  entities:
+    - sensor.temp_statistics_mean
+    - sensor.humidity_statistics_mean
 #    - sensor.airq_statistics_mean  
 
 system_view:
