--- a/sensor.yaml
+++ b/sensor.yaml
@@ -17,11 +17,11 @@
   unit_of_measurement: "%"
 #  value_template: '{{ value_json.humidity | round(1) }}'
   value_template: >-
-      {%- if value_json.humidity|float >= 5 and value_json.humidity|float <= 100 -%}
+      {% if value_json.humidity|float >= 5 and value_json.humidity|float <= 100 %}
       {{ value_json.temperature | round(1) }}
-      {%- else -%}
-      nan
-      {%- endif -%}  
+      {% else %}
+        ??
+      {% endif %}  
 
 - platform: mqtt
   state_topic: "bruh/sensornode1"
