--- a/sensor.yaml
+++ b/sensor.yaml
@@ -20,7 +20,7 @@
       {% if value_json.humidity|float >= 5 and value_json.humidity|float <= 100 %}
       {{ value_json.temperature | round(1) }}
       {% else %}
-        ??
+      {{ value_json.temperature | round(1) }}
       {% endif %}  
 
 - platform: mqtt
