--- a/sensor.yaml
+++ b/sensor.yaml
@@ -84,13 +84,13 @@
   name: uptime
   unit_of_measurement: hours
 
-- platform: statistics
-  name: Temp_statistics
-  entity_id: sensor.sn1_temperature
+#- platform: statistics
+#  name: Temp_statistics
+#  entity_id: sensor.sn1_temperature
 
-- platform: statistics
-  name: Humidity_statistics
-  entity_id: sensor.sn1_humidity
+#- platform: statistics
+#  name: Humidity_statistics
+#  entity_id: sensor.sn1_humidity
   
   
   
