--- a/sensor.yaml
+++ b/sensor.yaml
@@ -15,20 +15,26 @@
   state_topic: "bruh/sensornode1"
   name: "SN1 Humidity"
   unit_of_measurement: "%"
-  value_template: '{{ value_json.humidity | round(1) }}'
-#  value_template: >-
-#      {% if value_json.humidity|float >= 5 and value_json.humidity|float <= 100 %}
-#      {{ value_json.temperature | round(1) }}
-#      {% else %}
-#      {{ value_json.temperature | round(1) }}
-#      {% endif %}  
+#  value_template: '{{ value_json.humidity | round(1) }}'
+  value_template: >-
+      {% if value_json.humidity|float >= 5 and value_json.humidity|float <= 100 %}
+      {{ value_json.temperature | round(1) }}
+      {% else %}
+      {{ value_json.temperature | round(1) }}
+      {% endif %}  
 
 - platform: mqtt
   state_topic: "bruh/sensornode1"
   name: "SN1 LDR"
   ##This sensor is not calibrated to actual LUX. Rather, this a map of the input voltage ranging from 0 - 1023 .
   unit_of_measurement: "LUX"
-  value_template: '{{ value_json.ldr }}'
+#  value_template: '{{ value_json.ldr }}'
+  value_template: >-
+      {% if value_json.ldr|float >= 5 and value_json.ldr|float <= 1000 %}
+      {{ value_json.ldr | round(1) }}
+      {% else %}
+         ??
+      {% endif %}  
   qos: 1
 
 - platform: mqtt
@@ -45,7 +51,13 @@
   state_topic: "bruh/sensornode1"
   name: "SN1 Temperature"
   unit_of_measurement: '°C'
-  value_template: '{{ ((value_json.temperature | int - 32) * 5 / 9) | round(1) }}'
+#  value_template: '{{ ((value_json.temperature | int - 32) * 5 / 9) | round(1) }}'
+  value_template: >-
+      {% if value_json.temperature|float >= 5 and value_json.temperature|float <= 100 %}
+      {{ ((value_json.temperature | int - 32) * 5 / 9) | round(1) }}
+      {% else %}
+         ??
+      {% endif %} 
   qos: 1
   
 - platform: mqtt
@@ -61,11 +73,11 @@
   value_template: '{{ ((value_json.heatIndex | int - 32) * 5 / 9)| round(1) }}'
   qos: 1
 
-- platform: bh1750
-  name: Ambient light
-  operation_mode: one_time_high_res_mode_1
-  measurement_delay_ms: 200
-  scan_interval: 1
+#- platform: bh1750
+#  name: Ambient light
+#  operation_mode: one_time_high_res_mode_1
+#  measurement_delay_ms: 200
+#  scan_interval: 1
 
 - platform: systemmonitor
   resources:
