--- a/sensor.yaml
+++ b/sensor.yaml
@@ -18,7 +18,7 @@
 #  value_template: '{{ value_json.humidity | round(1) }}'
   value_template: >-
       {% if value_json.humidity|float >= 5 and value_json.humidity|float <= 100 %}
-      {{ value_json.temperature | round(1) }}
+      {{ value_json.humidity | round(1) }}
       {% else %}
          ??
       {% endif %}  
