--- a/sensor.yaml
+++ b/sensor.yaml
@@ -8,7 +8,12 @@
   state_topic: "bruh/sensornode1"
   name: "SN1 Solar"
   unit_of_measurement: '°C'
-  value_template: '{{ value_json.solartemp | round(1) }}'
+  value_template: >-
+      {% if value_json.solartemp|float >= 5 and value_json.solartemp|float <= 100 %}
+      {{ value_json.solartemp | round(1) }}
+      {% else %}
+         ??
+      {% endif %}
   icon: mdi:thermometer-lines
 
 - platform: mqtt
@@ -64,7 +69,12 @@
   state_topic: "bruh/sensornode12"
   name: "SN1 Temperature23"
   unit_of_measurement: '°C'
-  value_template: '{{ value_json.temp23 | round(1) }}'
+  value_template: >-
+      {% if value_json.temp23|float >= 5 and value_json.temp23|float <= 100 %}
+      {{ ((value_json.temp23 | int - 32) * 5 / 9) | round(1) }}
+      {% else %}
+         ??
+      {% endif %}
 
 - platform: mqtt
   state_topic: "bruh/sensornode1"
