added auto operation mode

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -28,7 +28,7 @@ climate:
     max_temp: 28
     min_cycle_duration:
       minutes: 20
-    initial_operation_mode: "off"
+    initial_operation_mode: "auto"
     target_temp: 23
     away_temp: 20
     cold_tolerance: 0.5
@@ -42,7 +42,7 @@ climate:
     max_temp: 28
     min_cycle_duration:
       minutes: 20
-    initial_operation_mode: "off"
+    initial_operation_mode: "auto"
     target_temp: 23
     away_temp: 20
     cold_tolerance: 0.5
@@ -56,7 +56,7 @@ climate:
     max_temp: 28
     min_cycle_duration:
       minutes: 20
-    initial_operation_mode: "off"
+    initial_operation_mode: "auto"
     target_temp: 23
     away_temp: 20
     cold_tolerance: 0.5
@@ -70,7 +70,7 @@ climate:
     max_temp: 28
     min_cycle_duration:
       minutes: 20
-    initial_operation_mode: "off"
+    initial_operation_mode: "auto"
     target_temp: 23
     away_temp: 20
     cold_tolerance: 0.5
@@ -84,7 +84,7 @@ climate:
     max_temp: 28
     min_cycle_duration:
       minutes: 20
-    initial_operation_mode: "off"
+    initial_operation_mode: "auto"
     target_temp: 23
     away_temp: 20
     cold_tolerance: 0.5
