--- a/configuration.yaml
+++ b/configuration.yaml
@@ -71,7 +71,7 @@ climate:
     min_cycle_duration:
       minutes: 20
     initial_operation_mode: "auto"
-    target_temp: 23
+    #target_temp: 23
     away_temp: 20
     cold_tolerance: 0.5
     hot_tolerance: 0.5
